--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,8 @@
     package="com.lutron.sir_wheelium_ii"
     android:versionCode="1"
     android:versionName="1.1" >
-
     <uses-permission android:name="android.permission.BLUETOOTH" />
-
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <application
         android:allowBackup="true"
         android:debuggable="true"
@@ -19,7 +18,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -32,5 +30,4 @@
                 android:value="com.lutron.sir_wheelium_ii.MainActivity" />
         </activity>
     </application>
-
 </manifest>
